--- a/appletask/Dockerfile
+++ b/appletask/Dockerfile
@@ -1,14 +1,13 @@
-# pull the official base image
+
 FROM node:alpine
-# set working direction
-WORKDIR /app
-# add `/app/node_modules/.bin` to $PATH
-ENV PATH /app/node_modules/.bin:$PATH
-# install application dependencies
-COPY package.json ./
-COPY package-lock.json ./
-RUN npm i
-# add app
-COPY . ./
-# start app
-CMD ["npm", "start"]
+
+WORKDIR /usr/app
+
+COPY package.json .
+RUN npm install
+
+RUN mkdir node_modules/.cache && chmod -R 777 node_modules/.cache
+
+COPY . .
+
+CMD ["npm", "run", "start"]
